Various changes as listed - Fixed adding square boxes - Fixed Death overlay adding to wrong person - Added Death Screen when robo dies - Added End Lose Screen - Added End Victory screen - Added Reset to play multiple games - Added Game loop when witness/accuse button pressed - Fixed Qtip that I had broken in previous commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,9 +54,36 @@ section {
   margin-bottom: 2rem;
 }
 
-main {
- /* background-color: #2C2416; */
+/* main {
+  background-color: #2C2416; 
+} */
+
+#victory,
+#loser,
+#reaper {
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 30;
+
 }
+
+
+#vcontainer,
+#lcontainer,
+#rcontainer {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: 29;
+}
+
 
 h1 {
   margin-bottom: 2rem;
@@ -141,11 +168,8 @@ h1 {
   }
 .l-2{
   z-index: 20;
-  margin-left:  -150px;
+  margin-left:  0px;
   position:absolute;
-}
-.l-3{
-  z-index: 30;
 }
 
 /* Start of intential npc.html stylings */
@@ -171,7 +195,11 @@ h1 {
   background-color: rgba(128, 128, 128, 0.439);
 }
 
+#wrongchoice{
+  display: none;
+}
 
+#wrongchoice,
 #get-witness,
 #accuse,
 #play-npc {
@@ -183,6 +211,7 @@ h1 {
   color: #14100E;
 }
 
+#wrongchoice:hover,
 #get-witness:hover,
 #accuse:hover,
 #play-npc:hover {
